--- a/css/header and section 1.css
+++ b/css/header and section 1.css
@@ -1,6 +1,10 @@
 .header {
     box-shadow: 0 3px 6px #00000029;
     padding-bottom: 6px;
+    position: fixed;
+    background-color: #ffffff;
+    width: 100vw;
+    z-index: 1;
 }
 
 .header__container {
@@ -10,6 +14,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 }
 
 .header__logo {
